--- a/css/admin.css
+++ b/css/admin.css
@@ -2157,7 +2157,7 @@ Component: timeline
 .nav-tabs-custom {
   margin-bottom: 20px;
   background: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 .nav-tabs-custom > .nav-tabs {
   margin: 0;
@@ -2196,7 +2196,7 @@ Component: timeline
   border-right-color: #f4f4f4;
 }
 .nav-tabs-custom > .nav-tabs > li:first-of-type {
-  margin-left: 0px;
+  margin-left: 0;
 }
 .nav-tabs-custom > .nav-tabs > li:first-of-type.active > a {
   border-left-width: 0;
@@ -2208,11 +2208,11 @@ Component: timeline
   float: right;
 }
 .nav-tabs-custom > .nav-tabs.pull-right > li:first-of-type {
-  margin-right: 0px;
+  margin-right: 0;
 }
 .nav-tabs-custom > .nav-tabs.pull-right > li:first-of-type.active > a {
   border-left-width: 1px;
-  border-right-width: 0px;
+  border-right-width: 0;
 }
 .nav-tabs-custom > .nav-tabs > li.header {
   font-weight: 400;
@@ -2242,9 +2242,9 @@ Component: timeline
 .pagination > li > a {
   background: #fafafa;
   color: #666;
-  -webkit-box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.09);
-  -moz-box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.09);
-  box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.09);
+  -webkit-box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.09);
+  -moz-box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.09);
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.09);
 }
 .pagination > li:first-of-type a,
 .pagination > li:last-of-type a {
@@ -2413,7 +2413,7 @@ Component: timeline
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   background: #3d9970;
-  box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
   padding: 20px 10px;
   text-align: center;
   font-size: 26px;
@@ -2540,10 +2540,6 @@ Component: timeline
     white-space: normal!important;
   }
 }
-/* 
-    Skins
-    -----
-*/
 /* 
     Skin Blue 
     ---------
