adding each page dependency

--- a/ejs/ui-general.ejs
+++ b/ejs/ui-general.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [] %>
 <% include base/header %>
 
                     <!-- START ALERTS AND CALLOUTS -->
@@ -572,4 +573,5 @@
                     </div><!-- /.row -->
                     <!-- END TYPOGRAPHY -->
 
+<% jsFiles = [] %>
 <% include base/footer %>
