--- a/ejs/ui-sliders.ejs
+++ b/ejs/ui-sliders.ejs
@@ -1,3 +1,7 @@
+<% cssFiles = [] %>
+<% cssFiles.push( 'css/ionslider/ion.rangeSlider.css' ) %>
+<% cssFiles.push( 'css/ionslider/ion.rangeSlider.skinNice.css' ) %>
+<% cssFiles.push( 'css/bootstrap-slider/slider.css' ) %>
 <% include base/header %>
   
                     <div class="row">
@@ -70,4 +74,8 @@
                         </div><!-- /.col -->
                     </div><!-- /.row -->
 
+<% jsFiles = [] %>
+<% jsFiles.push( 'js/plugins/ionslider/ion.rangeSlider.min.js' ) %>
+<% jsFiles.push( 'js/plugins/bootstrap-slider/bootstrap-slider.js' ) %>
+<% jsFiles.push( 'js/demo/ui-sliders.js' ) %>
 <% include base/footer %>
