--- a/ejs/base/footer.ejs
+++ b/ejs/base/footer.ejs
@@ -8,5 +8,8 @@
         <script src="js/AdminLTE/app.js" type="text/javascript"></script>
         <!-- AdminLTE for demo purposes -->
         <script src="js/AdminLTE/demo.js" type="text/javascript"></script>
+        <% for ( var js in jsFiles ) { %>
+            <script src="<%= jsFiles[ js ] %>"></script>
+        <% } %>
     </body>
 </html>
