--- a/ejs/forms-advanced.ejs
+++ b/ejs/forms-advanced.ejs
@@ -1,3 +1,8 @@
+<% cssFiles = [] %>
+<% cssFiles.push( 'css/daterangepicker/daterangepicker-bs3.css' ) %>
+<% cssFiles.push( 'css/iCheck/all.css' ) %> 
+<% cssFiles.push( 'css/colorpicker/bootstrap-colorpicker.min.css' ) %> 
+<% cssFiles.push( 'css/timepicker/bootstrap-timepicker.min.css' ) %> 
 <% include base/header %>
 
                     <div class="row">
@@ -248,4 +253,12 @@
                         </div><!-- /.col (right) -->
                     </div><!-- /.row -->
 
+<% jsFiles = [] %>
+<% jsFiles.push( 'js/plugins/input-mask/jquery.inputmask.js' ) %>
+<% jsFiles.push( 'js/plugins/input-mask/jquery.inputmask.date.extensions.js' ) %>
+<% jsFiles.push( 'js/plugins/input-mask/jquery.inputmask.extensions.js' ) %>
+<% jsFiles.push( 'js/plugins/daterangepicker/daterangepicker.js' ) %>
+<% jsFiles.push( 'js/plugins/colorpicker/bootstrap-colorpicker.min.js' ) %>
+<% jsFiles.push( 'js/plugins/timepicker/bootstrap-timepicker.min.js' ) %>
+<% jsFiles.push( 'js/demo/forms-advanced.js' ) %>
 <% include base/footer %>
