--- a/ejs/forms-editors.ejs
+++ b/ejs/forms-editors.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [ 'css/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' ] %>
 <% include base/header %>
 
                     <div class="row">
@@ -38,4 +39,8 @@
                         </div><!-- /.col-->
                     </div><!-- ./row -->
 
+<% jsFiles = [] %>
+<% jsFiles.push( 'js/plugins/ckeditor/ckeditor.js' ) %>
+<% jsFiles.push( 'js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js' ) %>
+<% jsFiles.push( 'js/demo/forms-editors.js' ) %>
 <% include base/footer %>
