--- a/ejs/forms-general.ejs
+++ b/ejs/forms-general.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [] %>
 <% include base/header %>
 
                     <div class="row">
@@ -301,4 +302,5 @@
                         </div><!--/.col (right) -->
                     </div>   <!-- /.row -->
 
+<% jsFiles = [] %>
 <% include base/footer %>
