--- a/ejs/ui-buttons.ejs
+++ b/ejs/ui-buttons.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [] %>
 <% include base/header %>
 
                     <div class="row">
@@ -856,4 +857,5 @@
                         </div><!-- /.col -->
                     </div><!-- /. row -->
 
+<% jsFiles = [] %>
 <% include base/footer %>
