--- a/ejs/ui-icons.ejs
+++ b/ejs/ui-icons.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [ 'css/demo/ui-icons.css' ] %>
 <% include base/header %>
 
                   <div class="row">
@@ -1717,4 +1718,5 @@
                         </div><!-- /.col -->
                     </div><!-- /.row -->
 
+<% jsFiles = [] %>
 <% include base/footer %>
