--- a/ejs/ui-jquery.ejs
+++ b/ejs/ui-jquery.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [ 'css/jQueryUI/jquery-ui-1.10.3.custom.css' ] %>
 <% include base/header %>
 
                     <div class="row">
@@ -88,4 +89,7 @@
                         </div><!-- /.col right -->
                     </div><!-- /.row -->
 
+<% jsFiles = [] %>
+<% jsFiles.push( 'js/plugins/jquery-ui/jquery-ui.min.js' ) %>
+<% jsFiles.push( 'js/demo/ui-jquery.js' ) %>
 <% include base/footer %>
