--- a/ejs/ui-timeline.ejs
+++ b/ejs/ui-timeline.ejs
@@ -1,3 +1,4 @@
+<% cssFiles = [] %>
 <% include base/header %>
 
     <!-- row -->
@@ -149,4 +150,5 @@
                         </div><!-- /.col -->
                     </div><!-- /.row -->
 
+<% jsFiles = [] %>
 <% include base/footer %>
