--- a/ejs/main.ejs
+++ b/ejs/main.ejs
@@ -6,12 +6,11 @@
                      <div class="row">
                             <div class="box">
                                 <div class="box-header">
-                                    <h3 class="box-title">Block Buttons</h3>
+ 
                                 </div>
                                 <div class="box-body">
-                                    <button class="btn btn-default btn-block">.btn-block</button>
-                                    <button class="btn btn-default btn-block btn-flat">.btn-block .btn-flat</button>
-                                    <button class="btn btn-default btn-block btn-sm">.btn-block .btn-sm</button>
+                                    <button class="btn btn-default btn-block">I Need Someone to Pick me Something</button>
+                                   <button class="btn btn-default btn-block">I m Willing to Deliver Something on my Way </button>
                                 </div>
                             </div><!-- /.box -->
 					</div>
