--- a/less/admin.less
+++ b/less/admin.less
@@ -46,6 +46,7 @@
 @import "pages/login_and_register.less";
 @import "pages/404_500_errors.less";
 @import "pages/invoice.less";
+@import "pages/splash.less";
 
 //
 // skins
