--- a/ejs/base/header-lite.ejs
+++ b/ejs/base/header-lite.ejs
@@ -2,16 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Admin | Dashboard</title>
+        <title>Joud</title>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <!-- Ionicons -->
         <link href="bower_components/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+        <link href="bower_components/animate.css/animate.min.css" rel="stylesheet" type="text/css" />
         <!-- Theme style -->
         <link href="css/admin.css" rel="stylesheet" type="text/css" />
         <% for ( var css in cssFiles ) { %>
             <link href="<%= cssFiles[ css ] %>" rel="stylesheet" />
         <% } %>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
     </head>
     <body class="skin-blue">
