--- a/ejs/base/header.ejs
+++ b/ejs/base/header.ejs
@@ -414,7 +414,7 @@
             <!-- Right side column. Contains the navbar and content of the page -->
             <aside class="right-side">
                 <!-- Content Header (Page header) -->
-                <section class="content-header">
+                <!-- <section class="content-header">
                     <h1>
                         Blank page
                         <small>Control panel</small>
@@ -423,7 +423,7 @@
                         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
                         <li class="active">Blank page</li>
                     </ol>
-                </section>
+                </section> -->
 
                 <!-- Main content -->
                 <section class="content">
