--- a/less/skins/blue.less
+++ b/less/skins/blue.less
@@ -114,5 +114,6 @@
 
 .form-box .header,
 .bg-olive {
-    background-color: #8A9B0F !important;
+    background-color: @light-blue !important;
 }
+
