--- a/ejs/createJob.ejs
+++ b/ejs/createJob.ejs
@@ -57,10 +57,10 @@
     });
 });
 function initialize() {
-
+ 
 	 var mapProp = {
-	  center:new google.maps.LatLng(51.508742, -0.120850),
-	  zoom: 7,
+	  center:new google.maps.LatLng(25.1040137, 55.2018745),
+	  zoom: 13,
 	  mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
 	var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
