--- a/ejs/trackJouder.ejs
+++ b/ejs/trackJouder.ejs
@@ -31,14 +31,14 @@
     $("#trackJob").click(function (e) {
   e.preventDefault();//prevent the form from actually submitting
        
-            window.location = 'waitingJouder.html';
+            window.location = 'rateJouder.html';
     });
 });
 function initialize() {
-
+ 
 	 var mapProp = {
-	  center:new google.maps.LatLng(51.508742, -0.120850),
-	  zoom: 7,
+	  center:new google.maps.LatLng(25.1784191, 55.2430772),
+	  zoom: 15,
 	  mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
 	var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
