--- a/ejs/waitingJouder.ejs
+++ b/ejs/waitingJouder.ejs
@@ -1,26 +1,114 @@
 <% cssFiles = [] %>
 <% include base/header %>
                     
- 
+                    <div class="waiting-joaders">
 
-                     <div class="row">
-                          <div class="box-body">                  
+                         <div class="row">
+                              <div class="box-body">                  
                                     <div class="alert alert-success alert-dismissable">
                                         <i class="fa fa-check"></i>
                                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                                         <b>Your Job is Successfully Published  !</b> 
-										<br/>
-										now you will wait for some Jouder to pick your Package
+        								<br/>
+        								now you will wait for some Jouder to pick your Package
                                     </div>
                                 </div><!-- /.box-body -->
-					</div>
-<script type="text/javascript">
- $(function () {
-    $("#createJob").click(function (e) {
- 
-            window.location = 'createJob.html';
-    });
-});
+    					</div>
+
+                        <div class="row animated fadeIn" id="waiting">
+                            <div class="col-md-6">
+                                <h3>Waiting for Jouders to pick up your package
+                                </h3>
+                                <hr />
+                                <center>
+                                    <h4>
+                                        <i class="fa fa-refresh fa-spin"></i>
+                                    </h4>
+                                </center>
+                            </div>
+                        </div>
+
+                        <div class="row" id="done">
+                            <div class="col-md-6">
+                                <h3>Below are some Jouders who want to pick your package</h3>
+                                <hr />
+
+                                <div class="result">
+                                    <% var joaders = []; %>
+                                      <% function joaderFactory( name, price, pic ) { return { name: name, price: price, pic: pic } }%>
+                                      <% joaders.push( new joaderFactory( 'Fadi Ahmad', '10', 'avatar' ) ) %>
+                                      <% joaders.push( new joaderFactory( 'Samera Mahmood', '12', 'avatar2' ) ) %>
+                                      <% joaders.push( new joaderFactory( 'Soha Abdullah', '11', 'avatar3' ) ) %>
+                                      <% joaders.push( new joaderFactory( 'Ahmad Sabri', '9', 'avatar04' ) ) %>
+                                      <% joaders.forEach( function( item ) { %>
+                                    <div class="media">
+                                      <div class="media-left">
+                                        <a href="#">
+                                          <img class="profile-pic" class="media-object" src="img/<%= item.pic %>.png" />
+                                        </a>
+                                      </div>
+                                      
+                                      
+
+                                          <div class="media-body">
+                                            <h4 class="media-heading"><%= item.name %>
+                                                <label class="label label-info"><%= item.price %> AED</label>
+                                            </h4>
+                                            <span class="rating">
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star-half-empty"></span>
+                                            </span>
+                                          </div>
+                                      
+                                        
+                                      <div class="accept-action pull-right">
+                                            <a class="btn btn-success" href="">
+                                                accept
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    <hr />
+
+                                    <% }); %>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+<style>
+.profile-pic {
+    width: 50px;
+    border-radius: 50%;
+    border: 2px solid white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.fa.fa-star,
+.fa.fa-star-half-empty,
+.fa.fa-star-half {
+    color: orange;
+}
+
+.media {
+    position: relative;
+}
+
+.accept-action {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+</style>
+<script>
+(function($) {
+
+})(jQuery)
 </script>
+
 <% jsFiles = [] %>
 <% include base/footer %>
