--- a/ejs/waitingJouder.ejs
+++ b/ejs/waitingJouder.ejs
@@ -65,7 +65,7 @@
                                       
                                         
                                       <div class="accept-action pull-right">
-                                            <a class="btn btn-success" href="">
+                                            <a class="btn btn-success" href="trackJouder.html">
                                                 accept
                                             </a>
                                         </div>
