track juder label

--- a/ejs/trackJouder.ejs
+++ b/ejs/trackJouder.ejs
@@ -10,10 +10,11 @@
                                     <form role="form">
 									<div class="callout callout-info">
                                         <h4>Alaa Is picking Up your Package</h4>
-                                        <p>Alaa Current Location:</p>
+                                       
                                     </div>
-									   
-                            		<div  >
+						   
+                            	 <div class="form-group">
+								        <label>Alaa Current Location:</label>
 										<div id="googleMap" style="width:100%;height:200px;"></div>
 								      </div>
                                    <br/>
