--- a/ejs/createJob.ejs
+++ b/ejs/createJob.ejs
@@ -20,16 +20,22 @@
                                             <label>Details </label>
                                             <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
                                         </div>
-                                       <div class="input-group">
-                                        <span class="input-group-addon">$</span>
-                                        <input type="text" class="form-control">
-                                        <span class="input-group-addon">.00</span>
-                                       </div>
-									         <br/>
-									  <div  >
+
+									<div class="form-group">
+											 <label>Price</label>
+										   <div class="input-group">
+									   
+											<span class="input-group-addon">$</span>
+											<input type="text" class="form-control">
+											<span class="input-group-addon">.00</span>
+										   </div>
+						           </div>
+							
+									  <div class="form-group">
+									   <label>Attach Location</label>
 										<div id="googleMap" style="width:100%;height:200px;"></div>
 								      </div>
-									        <br/>
+								
                                         <!-- checkbox -->
                                         <div class="form-group">
                                             <div class="checkbox">
