--- a/ejs/examples-login.ejs
+++ b/ejs/examples-login.ejs
@@ -1,7 +1,14 @@
 <% cssFiles = [] %>
 <% include base/header-lite %>
 
-        <div class="form-box" id="login-box">
+        <div class="center-block">
+            <br />
+            <h1 class="align-center" style="font-family: 'Kaushan Script', cursive;">
+                Joude
+            </h1>    
+        </div>
+        
+        <div class="form-box" id="login-box" style="margin-top: 40px;">
             <div class="header">Sign In</div>
             <form action="../../index.html" method="post">
                 <div class="body bg-gray">
