--- a/ejs/main.ejs
+++ b/ejs/main.ejs
@@ -9,8 +9,8 @@
  
                                 </div>
                                 <div class="box-body">
-                                    <button id="createJob" class="btn btn-default btn-block">I Need Someone to Pick me Something</button>
-                                   <button class="btn btn-default btn-block">I m Willing to Deliver Something on my Way </button>
+                                    <button id="createJob" class="btn btn-lg btn-default btn-block">I Need Someone to Pick me Something</button>
+                                   <button class="btn btn-default btn-lg btn-block">I m Willing to Deliver Something on my Way </button>
                                 </div>
                             </div><!-- /.box -->
 					</div>
