--- a/ejs/waitingJouder.ejs
+++ b/ejs/waitingJouder.ejs
@@ -36,7 +36,7 @@
                                 <div class="result">
                                     <% var joaders = []; %>
                                       <% function joaderFactory( name, price, pic ) { return { name: name, price: price, pic: pic } }%>
-                                      <% joaders.push( new joaderFactory( 'Fadi Ahmad', '10', 'avatar' ) ) %>
+                                      <% joaders.push( new joaderFactory( 'Alaa Ahmad', '10', 'avatar' ) ) %>
                                       <% joaders.push( new joaderFactory( 'Samera Mahmood', '12', 'avatar2' ) ) %>
                                       <% joaders.push( new joaderFactory( 'Soha Abdullah', '11', 'avatar3' ) ) %>
                                       <% joaders.push( new joaderFactory( 'Ahmad Sabri', '9', 'avatar04' ) ) %>
