--- a/less/admin.less
+++ b/less/admin.less
@@ -62,3 +62,6 @@
 @import "plugins/i-check.less";
 @import "plugins/pace.less";
 @import "plugins/bootstrap-social.less";
+
+
+@import "override.less";
