--- a/ejs/base/footer.ejs
+++ b/ejs/base/footer.ejs
@@ -6,7 +6,7 @@
         <!-- AdminLTE App -->
         <script src="js/AdminLTE/app.js" type="text/javascript"></script>
         <!-- AdminLTE for demo purposes -->
-        <script src="js/AdminLTE/demo.js" type="text/javascript"></script>
+        <!-- script src="js/AdminLTE/demo.js" type="text/javascript"></script -->
         <% for ( var js in jsFiles ) { %>
             <script src="<%= jsFiles[ js ] %>"></script>
         <% } %>
