--- a/less/override.less
+++ b/less/override.less
@@ -1,3 +1,19 @@
 .bg-transparent, .bg-trans {
   background-color: transparent !important;
 }
+
+.align-center {
+  text-align: center;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.box {
+  border-top-width: 1px;
+}
