improve the  Map

--- a/ejs/trackJouder.ejs
+++ b/ejs/trackJouder.ejs
@@ -43,6 +43,14 @@ function initialize() {
 	  mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
 	var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
+	 var image = 'img/avatar-32.png';
+  var myLatLng = new google.maps.LatLng(25.1784291, 55.2430972);
+  var beachMarker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      icon: image
+  });
+
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
