--- a/ejs/createJob.ejs
+++ b/ejs/createJob.ejs
@@ -62,6 +62,17 @@
             window.location = 'waitingJouder.html';
     });
 });
+var parliament = new google.maps.LatLng(25.1040237, 55.2018945);
+var marker;
+var map;
+function toggleBounce() {
+alert('animate');
+  if (marker.getAnimation() != null) {
+    marker.setAnimation(null);
+  } else {
+    marker.setAnimation(google.maps.Animation.BOUNCE);
+  }
+}
 function initialize() {
  
 	 var mapProp = {
@@ -69,7 +80,17 @@ function initialize() {
 	  zoom: 13,
 	  mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
-	var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
+	 
+	map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
+ 
+marker = new google.maps.Marker({
+    map:map,
+    draggable:true,
+    animation: google.maps.Animation.DROP,
+    position: parliament
+  });
+   google.maps.event.addListener(marker, 'click', toggleBounce);
+ 
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
