--- a/ejs/createJob.ejs
+++ b/ejs/createJob.ejs
@@ -21,13 +21,13 @@
                                             <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
                                         </div>
 
-									<div class="form-group">
+
+									<div class="form-group" id="priceArea">
 											 <label>Price</label>
 										   <div class="input-group">
 									   
-											<span class="input-group-addon">$</span>
-											<input type="text" class="form-control">
-											<span class="input-group-addon">.00</span>
+											<input type="number" class="form-control">
+											<span class="input-group-addon">AED</span>
 										   </div>
 						           </div>
 							
@@ -47,7 +47,7 @@
                                         </div>
 
                                     
-									<button id="createJob" class="btn btn-default btn-block">Create</button>
+									<button id="createJob" class="btn btn-success btn-block">Create</button>
                                     </form>
                                 </div><!-- /.box-body -->
                             </div><!-- /.box -->
