--- a/ejs/trackJouder.ejs
+++ b/ejs/trackJouder.ejs
@@ -9,7 +9,7 @@
                                 <div class="box-body">
                                     <form role="form">
 									<div class="callout callout-info">
-                                        <h4>Alaa Is picking Up your Package</h4>
+                                        <h4><i class="fa fa-exclamation-triangle"></i> Alaa Is picking Up your Package</h4>
                                        
                                     </div>
 						   
@@ -20,7 +20,7 @@
                                
 
                                     
-									<button id="trackJob" class="btn btn-default btn-block">Mark as Completed</button>
+									<button id="trackJob" class="btn btn-success btn-block">Mark as Completed</button>
                                     </form>
                                 </div><!-- /.box-body -->
                             </div><!-- /.box -->
