--- a/less/commons/vars.less
+++ b/less/commons/vars.less
@@ -6,7 +6,7 @@
 @left-side-width: 220px;
 
 //Colors
-@light-blue: #8A9B0F; //Primary
+@light-blue: #88C425; //Primary
 @red: #f56954;        //Danger
 @green: #00a65a;      //Success
 @aqua: #00c0ef;       //Info
