--- a/ejs/main.ejs
+++ b/ejs/main.ejs
@@ -1,25 +1,59 @@
 <% cssFiles = [] %>
 <% include base/header %>
                     
- <!-- Block buttons -->
+<style>
+    .blurred-bg {
+        position: absolute;
+        top: 0;
+        left: -200px;
+        max-width: none !important;
+    }
 
+    .box {
+        background-color: transparent;
+        border-top: none;
+    }
+
+    .btn.btn-lg.btn-default.btn-block {
+        background-color: rgba(0, 0, 0, .7) !important;
+        border: 1px solid #efefef;
+        color: white;
+        line-height: 40px;
+        margin-bottom: 20px;
+    }
+
+    .btn.btn-lg.btn-default.btn-block:hover {
+        background-color: rgba(0, 0, 0, .4) !important;
+    }
+</style>
+ <!-- Block buttons -->
+<img src="img/dubai-01.png" class="blurred-bg" />
                      <div class="row">
                             <div class="box">
                                 <div class="box-header">
  
                                 </div>
-                                <div class="box-body">
-                                    <button id="createJob" class="btn btn-lg btn-default btn-block">I Need Someone to Pick me Something</button>
-                                   <button class="btn btn-default btn-lg btn-block">I m Willing to Deliver Something on my Way </button>
+                                <div class="box-body" style="margin-top: 90px;">
+                                    <button id="createJob" class="btn btn-lg btn-default btn-block">
+                                     Find someone to pick up a package</button>
+                                   <button class="btn btn-default btn-lg btn-block">
+                                     Deliver a package on my way </button>
                                 </div>
                             </div><!-- /.box -->
 					</div>
 <script type="text/javascript">
  $(function () {
     $("#createJob").click(function (e) {
- 
-            window.location = 'createJob.html';
+        window.location = 'createJob.html';
     });
+
+    var $doc = $( document );
+    $( '.blurred-bg' ).css({
+        height: $doc.height(),
+        width: 'auto',
+        maxWidth: 'auto',
+        'max-width': 'auto'
+    })
 });
 </script>
 <% jsFiles = [] %>
