--- a/ejs/examples-login.ejs
+++ b/ejs/examples-login.ejs
@@ -4,7 +4,7 @@
         <div class="center-block">
             <br />
             <h1 class="align-center" style="font-family: 'Kaushan Script', cursive;">
-                Joude
+                Joud
             </h1>    
         </div>
         
